fixed overflow on button hover

--- a/css/components/_buttons.scss
+++ b/css/components/_buttons.scss
@@ -91,6 +91,7 @@ $button-background: #000;
         box-shadow: 0px 14px 55px rgba($color-1, 0.08);
         color: $button-background;
         font-weight: 600;
+        overflow: hidden;
 
         &::after {
             content: '';
