--- a/css/style.css
+++ b/css/style.css
@@ -1422,6 +1422,7 @@ body.menu-open .mobile_nav {
   box-shadow: 0px 14px 55px rgba(51, 163, 245, 0.08);
   color: #000;
   font-weight: 600;
+  overflow: hidden;
 }
 .button-ghost::after {
   content: "";
